# aram-matchdata-etl

./: .env  .gitignore  Dockerfile  README.md  celery_app.py  celerybeat-schedule  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tasks.py
.github/ISSUE_TEMPLATE/: 이슈_생성_템플릿.yaml
.github/workflows/: airflow-deploy.yml
code/: crawling.py
common/kafka/: __init__.py
dags/: crawling.py  patchnote_crawler_dag.py
db/: mongodb.py
extractor/riot/: .gitignore  __init__.py  docker-compose.yml  pyproject.toml  tasks.py
extractor/riot/db/: mongodb.py  redis.py
extractor/riot/match/: api.py  queue.py
loader/: __init__.py
match/: __init__.py  api.py  queue.py
transformer/award/: __init__.py
transformer/ranking/: __init__.py  data_extractor.py  feature_engineering.py  feature_factory.py  modeling.py  test_labeling.py  test_modeling.py  test_result.txt
user/: job.py  queue.py
